--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gammon_ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "tsgammon-ui",
   "dependencies": {
     "@types/node": "^12.19.14",
     "@types/react": "^16.9.56",
