--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "web-vitals": "^0.2.4"
     },
     "scripts": {
+        "prepare": "simple-git-hooks",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -27,7 +28,17 @@
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "prettier": "prettier --write .",
-        "eslint": "eslint . --ext .ts,.tsx"
+        "eslint": "eslint . --ext .ts,.tsx",
+        "precommit": "run-s lint-staged test",
+        "prepush": "npm run test"
+    },
+    "simple-git-hooks": {
+        "pre-commit": "npm run precommit",
+        "pre-push": "npm run prepush"
+    },
+    "lint-staged": {
+        "*.ts": "eslint --cache",
+        "*.{ts,tsx,css,md}": "prettier --write"
     },
     "eslintConfig": {
         "env": {
@@ -84,6 +95,7 @@
         "eslint": "^8.13.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jest": "^25.7.0",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.3.0",
         "react-is": "^17.0.1",
         "react-refresh": "^0.11.0",
