--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "tsgammon-ui",
     "version": "0.3.0",
     "private": true,
-    "homepage":"tsgammon-ui/",
+    "homepage": "tsgammon-ui/",
     "main": "dist/App.js",
     "files": [
         "dist"
@@ -25,13 +25,15 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "jest": "jest",
         "eject": "react-scripts eject",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "prettier": "prettier --write .",
         "eslint": "eslint . --ext .ts,.tsx",
-        "precommit": "run-s lint-staged test",
-        "prepush": "npm run test"
+        "lint-staged": "lint-staged",
+        "precommit": "run-s lint-staged",
+        "prepush": "npm run jest"
     },
     "jest": {
         "testMatch": [
@@ -101,10 +103,12 @@
         "eslint": "^8.13.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jest": "^25.7.0",
+        "lint-staged": "^13.1.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.3.0",
         "react-is": "^17.0.1",
         "react-refresh": "^0.11.0",
+        "simple-git-hooks": "^2.8.1",
         "ts-jest": "^26.5.6"
     }
 }
