--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@types/styled-components": "^5.1.7",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-scripts": "^5.0.0",
+        "react-scripts": "^5.0.1",
         "styled-components": "^5.2.1",
         "tsgammon-core": "^0.3.0",
         "typescript": "^4.6.3",
@@ -27,7 +27,7 @@
         "test": "react-scripts test",
         "jest": "jest",
         "eject": "react-scripts eject",
-        "storybook": "start-storybook -p 6006",
+        "storybook": "start-storybook -p 6006 --disable-telemetry",
         "build-storybook": "build-storybook",
         "prettier": "prettier --write .",
         "eslint": "eslint . --ext .ts,.tsx",
@@ -93,8 +93,8 @@
         "@storybook/builder-webpack5": "^6.4.19",
         "@storybook/manager-webpack5": "^6.4.19",
         "@storybook/node-logger": "^6.4.19",
-        "@storybook/preset-create-react-app": "^4.1.0",
-        "@storybook/react": "^6.4.19",
+        "@storybook/preset-create-react-app": "^4.1.2",
+        "@storybook/react": "^6.1.21",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/react-hooks": "^5.0.0",
