--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tsgammon-ui",
-    "version": "0.3.0",
+    "version": "0.4.0-alpha.0",
     "private": true,
     "homepage": "tsgammon-ui/",
     "main": "dist/App.js",
