prepush時のテストの指定を変更

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "eslint": "eslint . --ext .ts,.tsx",
         "lint-staged": "lint-staged",
         "precommit": "run-s lint-staged",
-        "prepush": "npm run jest"
+        "prepush": "npm run test -- --watchAll=false"
     },
     "jest": {
         "testMatch": [
